k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev.api.curiboard.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend-app-service
              port: 
                number: 8080
  - host: dev.auth.curiboard.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "auth-app-service"
              port:
                number: 8000
